--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -2,7 +2,7 @@ name: Scrapper Build
 
 on:
   workflow_dispatch:
-  pull_request:
+  push:
     paths:
       - .github/workflows/scrapper.yml
       - link-parser/**
@@ -14,7 +14,6 @@ jobs:
     name: Build
     permissions:
       packages: write
-      pull-requests: write
 
     steps:
       - uses: actions/checkout@v4
