--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -6,7 +6,9 @@ spring:
     name: bot
   jackson:
     time-zone: UTC
-
+springdoc:
+  swagger-ui:
+    path: /swagger-ui/index.html
 server:
   port: 8090
 
