--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -7,7 +7,9 @@ app:
 spring:
   application:
     name: scrapper
-
+springdoc:
+  swagger-ui:
+    path: /swagger-ui/index.html
 server:
   port: 8080
 
