--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
 springdoc:
   swagger-ui:
     path: /swagger-ui/index.html
+  default-produces-media-type: application/json
 server:
   port: 8090
 
