--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
 springdoc:
   swagger-ui:
     path: /swagger-ui/index.html
+  default-produces-media-type: application/json
 server:
   port: 8080
 
