--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -3,7 +3,7 @@ app:
     enable: true
     interval: 5000
     force-check-delay: 10s
-  database-access-type: jpa
+  database-access-type: jdbc
 
 spring:
   application:
