--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -9,6 +9,11 @@ spring:
     name: scrapper
   liquibase:
     enabled: false
+  datasource:
+    url: jdbc:postgresql://localhost:5432/scrapper
+    username: postgres
+    password: postgres
+
 springdoc:
   swagger-ui:
     path: /swagger-ui/index.html
