--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -3,7 +3,7 @@ app:
     enable: true
     interval: 5000
     force-check-delay: 10s
-  database-access-type: jdbc
+  database-access-type: jpa
   retry:
     max-attempts: 10
     delay: 400
@@ -17,7 +17,7 @@ app:
     batch-size: 100_000
     max-in-flight-per-connection: 5
     enable-idempotence: true
-  use-queue: false
+  use-queue: true
 
 spring:
   application:
