--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -14,12 +14,10 @@ spring:
     name: scrapper
   liquibase:
     enabled: false
-    
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        
   datasource:
     url: jdbc:postgresql://localhost:5432/scrapper
     username: postgres
@@ -29,6 +27,7 @@ spring:
       - buckets
     caffeine:
       spec: maximumSize=100000,expireAfterAccess=3600s
+
 bucket4j:
   enabled: true
   filters:
@@ -42,12 +41,33 @@ bucket4j:
               unit: minutes
               refill-speed: interval
 
-
-
 springdoc:
   swagger-ui:
     path: /swagger-ui/index.html
   default-produces-media-type: application/json
+
+management:
+  endpoints:
+    enabled-by-default: false
+    web:
+      base-path: "/"
+      exposure:
+        include: "info,health,prometheus"
+      path-mapping:
+        prometheus: "metrics"
+  endpoint:
+    info:
+      enabled: true
+    health:
+      enabled: true
+    prometheus:
+      enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
+  server:
+    port: 8081
+
 server:
   port: 8080
   forward-headers-strategy: NATIVE
