--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -27,7 +27,7 @@ jobs:
         run: mvn -pl scrapper -am package
 
       - name: scrapper image build
-        run: docker build -f scrapper.Dockerfile
+        run: docker build -f scrapper.Dockerfile .
 
       - id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
