--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           docker login --username Bruh3509 --password ${{ secrets.GHCR_PASSWD }} ghcr.io
           docker build -f scrapper.Dockerfile . --tag ghcr.io/scrapper-image-ghcr:latest
-          docker push ghcr.io/Bruh3509/scrapper-image-ghcr:latest
+          docker push ghcr.io/scrapper-image-ghcr:latest
 
       - id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
