--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           docker login --username Bruh3509 --password ${{ secrets.GHCR_PASSWD }} ghcr.io
           docker build -f bot.Dockerfile . --tag bot-image-ghcr:latest
-          docker push ghcr.io/bruh3509/bot-image-ghcr:latest
+          docker push bot-image-ghcr:latest
 
       - id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
