--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -29,8 +29,8 @@ jobs:
       - name: bot image build
         run: |
           docker login --username Bruh3509 --password ${{ secrets.GHCR_PASSWD }} ghcr.io
-          docker build -f scrapper.Dockerfile . --tag scrapper-image-ghcr:latest
-          docker push scrapper-image-ghcr:latest
+          docker build -f scrapper.Dockerfile . --tag ghcr.io/scrapper-image-ghcr:latest
+          docker push ghcr.io/scrapper-image-ghcr:latest
 
       - id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
