--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -29,7 +29,7 @@ jobs:
       - name: bot image build
         run: |
           docker login --username Bruh3509 --password ${{ secrets.GHCR_PASSWD }} ghcr.io
-          docker build -f scrapper.Dockerfile . --tag scrapper-image
+          docker build -f scrapper.Dockerfile . --tag ghcr.io/scrapper-image
           docker push ghcr.io/Bruh3509/scrapper-image:latest
 
       - id: jacoco
