--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -26,11 +26,19 @@ jobs:
       - name: maven build
         run: mvn -pl bot -am package
 
-      - name: bot image build
-        run: |
-          docker login --username Bruh3509 --password ${{ secrets.GHCR_PASSWD }} ghcr.io
-          docker build -f bot.Dockerfile . --tag ghcr.io/bruh3509/bot-image
-          docker push ghcr.io/brh3509/bot-image:latest
+      - name: Loging
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ghcr.io
+          username: Bruh3509
+          password: ${{ secrets.GHCR_PASSWD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: .
+          file: ./bot.Dockerfile
+          push: true
 
       - id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
