--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -39,6 +39,8 @@ jobs:
           context: .
           file: ./scrapper.Dockerfile
           push: true
+          tags: scrapper-image
+          labels: latest
 
       - id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
