--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -33,14 +33,20 @@ jobs:
           username: Bruh3509
           password: ${{ secrets.GHCR_PASSWD }}
 
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ghcr.io/bot-image
+
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
           file: ./bot.Dockerfile
           push: true
-          tags: bot-image
-          labels: latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
       - id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
