--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -9,7 +9,7 @@ on:
       - scrapper/**
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: scrapper-image
+  IMAGE_NAME: ${{ github.repository }}/scrapper-image
 
 jobs:
   build:
