--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -8,7 +8,7 @@ on:
       - bot/**
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: bot-image
+  IMAGE_NAME: ${{ github.repository }}/bot-image
 
 jobs:
   build:
