--- a/scrapper/pom.xml
+++ b/scrapper/pom.xml
@@ -125,6 +125,21 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Jooq -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jooq</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq-codegen</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq-meta-extensions-liquibase</artifactId>
+            <version>3.19.8</version>
+        </dependency>
+
         <!-- Monitoring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
